# carrot_drawer

./: Cargo.toml  README.md
src/: app_setup.rs  lib.rs  main.rs
src/core/: camera.rs  core.rs  mod.rs  renderer.rs
src/core/graphics2d/: engine.rs  layer.rs  mod.rs
src/core/shaders/: test_shader.wgsl
src/core/vis_geometry/: contour.rs  mod.rs  triangulation.rs  vertex.rs
