[package]
name = "carrot"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = {version="28.0.0", features=["glsl", "serde"]}
winit = "0.30.12"
env_logger = "0.11"
# pollster = "0.4"
tokio = {version="1.48.0", features=["full"] }
bytemuck = { version="1.24.0", features = ["derive"] }

glam = "0.30.10"

anyhow = "*"
log = "*"